fixed the alignment of the board

--- a/TTTRefactored/style.css
+++ b/TTTRefactored/style.css
@@ -1,10 +1,10 @@
 #board {
-  width: 400px;
-  height: 400px;
-  position: relative;
+  width: 330px;
+  height: 330px;
   top: 30px;
   left: 25%;
   text-align: center;
+  margin: 0 auto;
 }
 
 .box {
